src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ABM_Influenced_Date_Lead__c</fullName>
        <label>ABM Influenced Date (Lead)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ABM_Influenced_Lead__c</fullName>
        <description>Field to indicate lead was part of an ABM Outreach Sequence</description>
        <label>ABM Influenced Lead</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actively_Being_Sequenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a lead is being actively Sequenced by Outreach</description>
        <label>Actively Being Sequenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdminUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a temp field created urgently as a hotfix to be able to save the corrupted records that resulted from a RingLead bug on 4/5/2021. This field will be deleted as soon as this project is over.</description>
        <label>Admin Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allbound_ID__c</fullName>
        <label>Allbound ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Primary alliances contact dedicated to Neo4j</inlineHelpText>
        <label>Alliance Partner Primary (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anonymous_Web_Source_Detail__c</fullName>
        <label>Anonymous Web Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anonymous_Web_Source__c</fullName>
        <label>Anonymous Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Assigned User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aura_UserID__c</fullName>
        <description>Added in https://sfdxspt-neoj4.atlassian.net/browse/SFDCSPT-354</description>
        <inlineHelpText>This will be used to identity unique Aura users along with email address and will allow us to prevent merging of Aura customer records with standard Neo4j leads and contacts.  This field does not have uniqueness enforced, and is mapped in standard Lead Conversion to the resulting Contact. This field helps those in Analytics operate their ETL processes around the tracking of MRR at the Campaign Member level.</inlineHelpText>
        <label>Aura UserID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <label>Behavior Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Behavioral_Last_Modified__c</fullName>
        <label>Behavioral Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Neo4j_L1__c</fullName>
        <label>Certification Neo4j L1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Phone__c</fullName>
        <inlineHelpText>Company&apos;s main phone number</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Copy_of_Lead_Source__c</fullName>
        <formula>TEXT(LeadSource)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy of Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_PQL_Type__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates which type of PQL that a lead or contact is. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates which type of Product Qualified Lead (PQL) that a Lead is. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Current PQL Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Observer</fullName>
                </value>
                <value>
                    <fullName>Spender</fullName>
                </value>
                <value>
                    <fullName>Worker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Sequence_Status__c</fullName>
        <description>Value of sequence state in outreach such as pending, paused, paused OOTO, failed</description>
        <label>Current Sequence Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Number__c</fullName>
        <description>Number of Sequence Step</description>
        <label>Current Sequence Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Step_Type__c</fullName>
        <description>Name of Current sequence step type in Outreach</description>
        <label>Current Sequence Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>auto_email</fullName>
                    <label>Auto-Email</label>
                </value>
                <value>
                    <fullName>manual_email</fullName>
                    <label>Manual Email</label>
                </value>
                <value>
                    <fullName>linkedin_interact_with_post</fullName>
                    <label>LinkedIn Interact with Post</label>
                </value>
                <value>
                    <fullName>linkedin_view_profile</fullName>
                    <label>LinkedIn View Profile</label>
                </value>
                <value>
                    <fullName>linkedin_send_connection_request</fullName>
                    <label>LinkedIn Send Connection Request</label>
                </value>
                <value>
                    <fullName>linkedin_send_message</fullName>
                    <label>LinkedIn Send Message</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Sequence_Task_Due_Date__c</fullName>
        <description>Due date of manual task in Outreach</description>
        <label>Current Sequence Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DNB_D_U_N_S_Number__c</fullName>
        <description>Upon successful match, Optimizer populates this field and references it for future refreshes. The Dun &amp; Bradstreet D-U-N-S® Number is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity in accordance with the Data Universal Numbering System (D-U-N-S).</description>
        <inlineHelpText>Upon successful match, Optimizer populates this field and references it for future refreshes. It is an identification number assigned by Dun &amp; Bradstreet that uniquely identifies the entity based on the Data Universal Numbering System (D-U-N-S).</inlineHelpText>
        <label>D&amp;B DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBCompanyRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D-U-N-S Number for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadToDnB</label>
        <referenceTo>DNBoptimizer__DnBCompanyRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB</relationshipLabel>
        <relationshipName>LeadToDnB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__DnBContactRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</description>
        <inlineHelpText>Upon a successful match, Optimizer populates this field that links the Lead record to a specific D&amp;B Contact ID for display of the correct custom object with D&amp;B data.</inlineHelpText>
        <label>LeadContactToDnB</label>
        <referenceTo>DNBoptimizer__DnBContactRecord__c</referenceTo>
        <relationshipLabel>LeadToDnB_Contact</relationshipLabel>
        <relationshipName>LeadToDnB_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database_Name_Contains_Production__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an AuraDB user has at least one database that contains the naming convention &apos;Production&apos; in it. If the value is 0, it does not necessarily mean that the user is not in production, but that they do not have a database that contains the naming convention &apos;Prodution&apos;.This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an AuraDB user has at least one database that contains the naming convention &apos;Production&apos; in it. If the value is unchecked, it does not necessarily mean that the user is not in production, but that they do not have a database that contains the naming convention &apos;Production&apos;. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Database Name Contains ‘Production’</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Annual_Revenue_Range__c</fullName>
        <label>Demographic Score: Annual Revenue Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Employee_Range__c</fullName>
        <label>Demographic Score: Employee Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Industry__c</fullName>
        <label>Demographic Score: Industry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Job_Function__c</fullName>
        <label>Demographic Score: Job Function</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score_Stored_Value__c</fullName>
        <formula>Demographic_Score_Annual_Revenue_Range__c  +  Demographic_Score_Employee_Range__c  +  Demographic_Score_Industry__c + Demographic_Score_Job_Function__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demographic Score Stored Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <label>Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>Application Development or Data Science</description>
        <inlineHelpText>Application Development or Data Science</inlineHelpText>
        <label>Discipline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Data Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Date__c</fullName>
        <label>Disqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason_History__c</fullName>
        <label>Disqualified Reason History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Double_Opt_In_Date__c</fullName>
        <label>Double Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Double_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Secondary__c</fullName>
        <description>Secondary email for lead record</description>
        <label>Email (Secondary)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <label>Employee Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 19</fullName>
                </value>
                <value>
                    <fullName>20 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 249</fullName>
                </value>
                <value>
                    <fullName>250 to 499</fullName>
                </value>
                <value>
                    <fullName>500 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 2,499</fullName>
                </value>
                <value>
                    <fullName>2,500 to 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 to 9,999</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
                <value>
                    <fullName>1,000+</fullName>
                    <isActive>false</isActive>
                    <label>1,000+</label>
                </value>
                <value>
                    <fullName>10 to 99</fullName>
                    <isActive>false</isActive>
                    <label>10 to 99</label>
                </value>
                <value>
                    <fullName>100 to 999</fullName>
                    <isActive>false</isActive>
                    <label>100 to 999</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eventbrite_ID__c</fullName>
        <description>ID for Eventbrite to Marketo Connection</description>
        <label>Eventbrite ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_LSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - LSO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SAL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - SAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SAO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - SAO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired_SLA_SQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired SLA - SQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Tier_User_Status__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an Aura user has had at least one live Free AuraDB database running within the past 24 hours. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates whether an Aura user has had at least one live Free AuraDB database running within the past 24 hours. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Free Tier User Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Territory__c</fullName>
        <description>Indicates what global region the Lead falls into based on the shipping country. Correction made to the original list. JIRA: SFDCSPT-248</description>
        <formula>IF(ISBLANK(Country), &quot; &quot;,


IF(CONTAINS(&quot;Algeria : Armenia : Austria : Azerbaijan : Bahrain : Belarus : Belgium : Bosnia and Herzegovina : Bulgaria : Cameroon : Croatia : Cyprus : Czech Republic : Denmark : Egypt : Estonia : Ethiopia : Finland : France : Georgia : Germany : Ghana : Gibraltar : Greece : Hungary : Iceland : Iran : Iran : Ireland : Israel : Italy : Ivory Coast : Jordan : Kazakhstan : Kenya : Kuwait : Lebanon : Lithuania : Luxembourg : Malta : Monaco : Morocco : Netherlands : Nigeria : Norway : Oman : Poland : Portugal : Qatar : Romania : Russian Federation : Saudi Arabia : Serbia : Slovakia : Slovenia : South Africa : Spain : Sweden : Switzerland : Tunisia : Turkey : Uganda : Ukraine : United Arab Emirates : United Kingdom : Uzbekistan : Virgin Islands (British) : Zimbabwe : Sudan : Senegal&quot;, Country), &quot;EMEA&quot;,


IF(CONTAINS(&quot;Bermuda : Canada : United States&quot;, Country), &quot;NA&quot;,


IF(CONTAINS(&quot;Antigua and Barbuda : Argentina : Barbados : Brazil : Cayman Islands : Chile : Colombia : Costa Rica : Guatemala : Paraguay : Panama : Guyana : Peru : Ecuador : El Salvador : Mexico : Nicaragua : Uruguay : Venezuela : Honduras : Cuba : Jamaica : Bolivia : Anguilla : Bahamas : Belize : Dominica : Dominican Republic : Falkland Islands : Trinidad and Tobago : French Guiana&quot;,Country),&quot;LATAM&quot;,


IF(CONTAINS(&quot;Australia : Bangladesh : Cambodia : Bhutan : China : Guam : Hong Kong : India : Indonesia : Japan : Laos : Malaysia : Nepal : New Zealand : Pakistan : Philippines : Singapore : South Korea : Sri Lanka : Taiwan : Thailand : Vietnam : Myanmar : Brunei Darussalam : Macau : Mongolia&quot;, Country),&quot;APAC&quot;,


&quot; &quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates what global region the Lead falls into based on the shipping country.</inlineHelpText>
        <label>Global Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Core_Country__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A lead who works in a core country.</description>
        <inlineHelpText>A lead who works in a core country.</inlineHelpText>
        <label>In Core Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Original_Date__c</fullName>
        <label>Inquiry Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_Trigger_Type__c</fullName>
        <label>Intent Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged with Competitor</fullName>
                </value>
                <value>
                    <fullName>New Follower / Started Following</fullName>
                </value>
                <value>
                    <fullName>Engaged with Industry News</fullName>
                </value>
                <value>
                    <fullName>Attended Industry Conference</fullName>
                </value>
                <value>
                    <fullName>Hiring for Specific Roles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intent_Trigger__c</fullName>
        <label>Intent Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AllegroGraph</fullName>
                </value>
                <value>
                    <fullName>Amazon Neptune</fullName>
                </value>
                <value>
                    <fullName>ArangoDB</fullName>
                </value>
                <value>
                    <fullName>Cypher</fullName>
                </value>
                <value>
                    <fullName>Datastax Enterprise</fullName>
                </value>
                <value>
                    <fullName>Dgraph</fullName>
                </value>
                <value>
                    <fullName>Giraph</fullName>
                </value>
                <value>
                    <fullName>Graph Database</fullName>
                </value>
                <value>
                    <fullName>Graph Databases</fullName>
                </value>
                <value>
                    <fullName>Graph Day Texas</fullName>
                </value>
                <value>
                    <fullName>GraphDB</fullName>
                </value>
                <value>
                    <fullName>Graph DB</fullName>
                </value>
                <value>
                    <fullName>GraphQL</fullName>
                </value>
                <value>
                    <fullName>JanusGraph</fullName>
                </value>
                <value>
                    <fullName>Microsoft Azure Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Microsoft Cosmos DB</fullName>
                </value>
                <value>
                    <fullName>Neo4j</fullName>
                </value>
                <value>
                    <fullName>OrientDB</fullName>
                </value>
                <value>
                    <fullName>Stardog</fullName>
                </value>
                <value>
                    <fullName>TigerGraph</fullName>
                </value>
                <value>
                    <fullName>Virtuoso</fullName>
                </value>
                <value>
                    <fullName>Anti-Money Laundering</fullName>
                </value>
                <value>
                    <fullName>Fraud Rings</fullName>
                </value>
                <value>
                    <fullName>Fraud Detection</fullName>
                </value>
                <value>
                    <fullName>Transactions Fraud</fullName>
                </value>
                <value>
                    <fullName>Bank Fraud</fullName>
                </value>
                <value>
                    <fullName>Aml</fullName>
                </value>
                <value>
                    <fullName>Product Recommendations</fullName>
                </value>
                <value>
                    <fullName>Service Recommendations</fullName>
                </value>
                <value>
                    <fullName>Contant Recommendations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Database Administrator (DBA)</fullName>
                </value>
                <value>
                    <fullName>Development Manager/Tech Lead/Director</fullName>
                </value>
                <value>
                    <fullName>IT Executive (CIO, CTO, VP Engineering..)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Product/Project Management</fullName>
                </value>
                <value>
                    <fullName>Software Developer/Engineer</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Business Executive</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Personal Assistant</fullName>
                </value>
                <value>
                    <fullName>Data Analyst</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin/Administrator</fullName>
                </value>
                <value>
                    <fullName>Analyst/Strategist</fullName>
                </value>
                <value>
                    <fullName>Chief (CXO)</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Closed_Won__c</fullName>
        <label>Last Touch - Closed Won</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Inquiry__c</fullName>
        <label>Last Touch - Inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_Late_Stage__c</fullName>
        <label>Last Touch - Late Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_MQL__c</fullName>
        <label>Last Touch - MQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SAL__c</fullName>
        <label>Last Touch - SAL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SAO__c</fullName>
        <label>Last Touch - SAO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Touch_SQL__c</fullName>
        <label>Last Touch - SQL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Stage_Opportunity_Date__c</fullName>
        <label>Late Stage Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Today__c</fullName>
        <description>Evaluates to true if the created date is today. This was implemented to assist in lead routing with LeanData</description>
        <formula>DATEVALUE(CreatedDate) = TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Engagement_Link__c</fullName>
        <label>Lead Engagement Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <description>The grade of a lead to identify leads that are most likely to buy.</description>
        <inlineHelpText>The grade of a lead to identify leads that are most likely to buy.</inlineHelpText>
        <label>Lead Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_HQ_City__c</fullName>
        <description>Lead HQ City (populated by funnel beam in Marketo)</description>
        <label>Lead HQ City</label>
        <length>12</length>
        <type>Text</type>
    </fields>
</CustomObject>